demo-oneservice/primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-primary
  labels:
    app: rancher-demo-primary
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: rancher-demo-primary
